--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <img src="portfolio/Images/redbull.jpeg" class="cars" width="45%">
             <img src="portfolio/Images/mercedes.jpeg" class="cars" width="45%">
         </div>
-            <footer>
-                <p><a href="portfolio/secret.html">Secret Page</a></p>
-            </footer>
+        <div class="secret">
+            <a class="secrettext" href="portfolio/secret.html">Secret Page</a>
+        </div>
         
     </div>
 </body>
